--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#8D64F9</color>
-    <color name="colorPrimaryDark">#7845F3</color>
+    <color name="colorPrimary">#2a5dff</color>
+    <color name="colorPrimaryDark">#2a5dff</color>
     <color name="colorAccent">#F56FA3</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#0000FF</color>
 </resources>
