--- a/app/src/main/res/layout/activity_viet_map_navigation.xml
+++ b/app/src/main/res/layout/activity_viet_map_navigation.xml
@@ -74,4 +74,25 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.arlib.floatingsearchview.FloatingSearchView
+        android:id="@+id/floating_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:floatingSearch_searchBarMarginLeft="10dp"
+        app:floatingSearch_searchBarMarginTop="15dp"
+        app:floatingSearch_searchBarMarginRight="10dp"
+        app:floatingSearch_searchHint="Tìm kiếm địa chỉ..."
+        app:floatingSearch_suggestionsListAnimDuration="250"
+        app:floatingSearch_showSearchKey="true"
+        app:showAsAction="always"
+        app:floatingSearch_suggestionRightIconColor="@color/white"
+        android:paddingLeft="0dp"
+        android:paddingStart="0dp"
+        android:paddingRight="0dp"
+        app:barrierMargin="0dp"
+        app:floatingSearch_showMoveSuggestionUp="true"
+        app:floatingSearch_leftActionMode="noLeftAction"
+        app:floatingSearch_close_search_on_keyboard_dismiss="true"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
