--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     app:behavior_hideable="true"
 
-    app:behavior_peekHeight="110dp"
+    app:behavior_peekHeight="200dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <LinearLayout
@@ -74,7 +74,7 @@
                         android:fontFamily="serif"
                         android:paddingBottom="3dp"
                         android:text=" Km"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -94,7 +94,14 @@
                     app:layout_constraintStart_toEndOf="@id/maneuverInstruction"
                     app:layout_constraintTop_toBottomOf="@+id/distance_remaining_view" />
 
+                <LinearLayout
+                    android:id="@+id/right_action_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
 
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toTopOf="parent">
                 <ImageButton
                     android:id="@+id/overViewRouteButton"
                     android:layout_width="25dp"
@@ -104,11 +111,23 @@
                     android:layout_marginRight="15dp"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/over_view"
-                    android:visibility="gone"
-                    app:layout_constraintEnd_toEndOf="parent"
 
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:src="@drawable/over_view"
+                    android:visibility="visible"/>
+
+                    <ImageButton
+                        android:id="@+id/mute"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/volume_up_24px_rounded"
+                        android:visibility="visible"
+
+                        />
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -232,7 +251,7 @@
                     android:scaleType="fitCenter"
 
                     android:src="@drawable/ic_baseline_close_24"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
 
                     app:layout_constraintTop_toBottomOf="@+id/overViewRouteButton" />
