--- a/app/src/main/res/layout/show_bottom_sheet.xml
+++ b/app/src/main/res/layout/show_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/shape"
-    tools:context=".CustomBottomSheet">
+    tools:context="vn.vietmap.viet_navigation.CustomBottomSheet">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
