--- a/app/src/main/res/layout/vietmap_navigation_expand.xml
+++ b/app/src/main/res/layout/vietmap_navigation_expand.xml
@@ -7,21 +7,21 @@
     android:layout_height="match_parent">
 
 
-    <com.mapbox.services.android.navigation.ui.v5.NavigationView
+    <vn.vietmap.services.android.navigation.ui.v5.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="visible"
-        app:maplibre_cameraZoom="20"
+        app:vietmap_cameraZoom="20"
         app:layout_constraintHeight_percent="1"
         app:layout_constraintBottom_toBottomOf="@+id/vietmapNavigationExpand"
         app:navigationDarkTheme="@style/NavigationViewDark"
         app:navigationLightTheme="@style/NavigationViewLight"/>
-    <com.mapbox.mapboxsdk.maps.MapView
+    <vn.vietmap.vietmapsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:maplibre_cameraZoom="20"
+        app:vietmap_cameraZoom="20"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="@+id/vietmapNavigationExpand"
         app:layout_constraintBottom_toBottomOf="@+id/vietmapNavigationExpand"
