add control button

--- a/app/src/main/res/layout/activity_vmnavigation.xml
+++ b/app/src/main/res/layout/activity_vmnavigation.xml
@@ -14,6 +14,55 @@
         android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="1"/>
+        app:layout_constraintHeight_percent="1">
+
+    </vn.vietmap.vietmapsdk.maps.MapView>
+
+    <Button
+        android:id="@+id/btnStopNavigation"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/btnOverview"
+        android:onClick="btnStartStop_click"
+        android:text="StopNavigation" />
+
+    <Button
+        android:id="@+id/btnOverview"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="start|bottom"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:onClick="btnStartStop_click"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnRecenter"
+        android:text="Overview" />
+
+    <Button
+        android:id="@+id/btnRecenter"
+        android:layout_marginRight="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="start|bottom"
+        android:layout_marginBottom="10dp"
+        android:onClick="btnStartStop_click"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnStartNavigation"
+        android:text="ReCenter" />
+    <Button
+        android:id="@+id/btnStartNavigation"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:onClick="btnStartStop_click"
+        android:text="StartNavigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
